<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="#50C0FF">

    <TextView
        android:id="@+id/newspref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/news_preference"/>
    <CheckBox
        android:id="@+id/checkbox_sports"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/sports"/>
    <CheckBox
        android:id="@+id/checkbox_finance"
        android:layout_below="@+id/checkbox_sports"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="-7dp"
        android:text="@string/finance"/>
    <CheckBox
        android:id="@+id/checkbox_career"
        android:layout_below="@+id/checkbox_finance"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="-7dp"
        android:text="@string/career"/>
    <CheckBox
        android:id="@+id/checkbox_technology"
        android:layout_below="@+id/checkbox_career"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="-7dp"
        android:text="@string/technology"/>
    <CheckBox
        android:id="@+id/checkbox_entertainment"
        android:layout_below="@+id/checkbox_technology"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_marginTop="-7dp"
        android:text="@string/entertainment"/>
    <TextView
        android:id="@+id/restrict"
        android:layout_below="@id/checkbox_entertainment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/sensitive_content_restrictions"/>

    <ToggleButton
        android:id="@+id/restrictButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/checkbox_entertainment"
        android:layout_marginStart="28dp"
        android:layout_marginTop="-6dp"
        android:layout_toEndOf="@+id/restrict" />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/darkmode"
        android:layout_below="@id/restrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/dark_mode"/>

    <ToggleButton
        android:id="@+id/darkModeButton"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_below="@+id/restrictButton"
        android:layout_marginStart="28dp"
        android:layout_toEndOf="@+id/restrict" />

    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/fontSize"
        android:layout_below="@id/darkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/font_size"/>
    <RadioGroup
        android:id="@+id/textSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fontSize">
        <RadioButton
            android:id="@+id/textSmall"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:text="@string/small"/>
        <RadioButton
            android:id="@+id/textMedium"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:text="@string/medium"/>
        <RadioButton
            android:id="@+id/textLarge"
            android:layout_width="wrap_content"
            android:layout_height="25sp"
            android:text="@string/large"/>
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/textSize"
        android:layout_marginTop="40dp"
        android:text="@string/save"
        android:onClick="saveSetting"
        tools:ignore="UsingOnClickInXml" />
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/saveButton"
        android:layout_marginTop="40dp"
        android:text="@string/cancel"
        android:onClick="cancel"
        tools:ignore="UsingOnClickInXml" />
</RelativeLayout>