<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/scrollable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_some_news"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_below="@+id/header_title"/>
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/title_label"/>
        <TextView
            android:id="@+id/writer_label"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writer"
            android:layout_below="@+id/title_label"/>
        <EditText
            android:id="@+id/writer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/writer_label"
            android:layout_below="@+id/title"/>
        <TextView
            android:id="@+id/category_label"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:layout_below="@+id/writer"/>
        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/category_label"
            android:layout_below="@+id/writer"/>
        <TextView
            android:id="@+id/news_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category_label"
            android:text="@string/news"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/news"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_below="@+id/news_label"
            android:hint="@string/insert_text_here"
            android:textAlignment="center" />
        <Button
            android:id="@+id/saveButton"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:layout_below="@+id/news"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/news"/>
    </RelativeLayout>

</ScrollView>