<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_content"
        android:textAlignment="center"/>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/title_label"
            android:layout_below="@+id/header_title"
            android:text="@string/title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_title"
            android:layout_toEndOf="@+id/title_label"
            tools:ignore="NotSibling" />
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/writer_label"
            android:layout_below="@+id/title_label"
            android:text="@string/writer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/writer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_toEndOf="@id/writer_label" />

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/category_label"
            android:layout_below="@+id/writer_label"
            android:text="@string/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/writer"
            android:layout_toEndOf="@+id/category_label" />
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/content_label"
            android:layout_below="@+id/category_label"
            android:text="@string/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/content_label"/>
        <Button
            android:id="@+id/saveButton"
            android:layout_below="@id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <Button
            android:id="@+id/cancel_button"
            android:layout_below="@id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

</ScrollView>