<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="#50C0FF">

    <TextView
        android:id="@+id/newspref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/news_preference"/>
    <TextView
        android:id="@+id/selectedPreference"
        android:paddingStart="20dp"
        android:textColor="#F8043F"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/sensitive_content_restrictions"/>
    <TextView
        android:id="@+id/restrictionStatus"
        android:paddingStart="20dp"
        android:textColor="#F8043F"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/dark_mode"/>
    <TextView
        android:id="@+id/darkModeStatus"
        android:paddingStart="20dp"
        android:textColor="#F8043F"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/font_size"/>
    <TextView
        android:id="@+id/fontSizeStatus"
        android:paddingStart="20dp"
        android:textColor="#F8043F"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry" />
    <Button
        android:id="@+id/okButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/ok"/>
</LinearLayout>