<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#50C0FF"
    android:orientation="horizontal">
    <HorizontalScrollView
        android:id="@+id/menus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/settingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="11sp"
                android:text="@string/setting"
                tools:ignore="ButtonStyle,UsingOnClickInXml" />

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/add_news"
                android:textAllCaps="false"
                android:textSize="11sp"
                tools:ignore="ButtonStyle,UsingOnClickInXml" />

            <Button
                android:id="@+id/menuButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="11sp"
                android:layout_marginStart="10dp"
                android:text="@string/finance"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/menuButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/career"
                android:textAllCaps="false"
                android:textSize="11sp"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/menuButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="11sp"
                android:layout_marginStart="10dp"
                android:text="@string/technology"
                tools:ignore="ButtonStyle"/>
            <Button
                android:id="@+id/menuButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="11sp"
                android:layout_marginStart="10dp"
                android:text="@string/entertainment"
                tools:ignore="ButtonStyle"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ListView
        android:id="@+id/data"
        android:layout_below="@+id/menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>